objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <label>Workday Employee Data</label>
    <nameField>
        <label>RSG Employee Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workday Employees Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>