objects/Employee__c/fields/BU_Id__c.field-meta.xml
<CustomField>
    <fullName>BU_Id__c</fullName>
    <label>BU Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>