objects/Employee__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <label>Cost Center</label>
    <length>30</length>
    <type>Text</type>
</CustomField>