objects/Employee__c/fields/Division_Id__c.field-meta.xml
<CustomField>
    <fullName>Division_Id__c</fullName>
    <label>Division Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>