objects/Employee__c/fields/EmployeeType__c.field-meta.xml
<CustomField>
    <fullName>EmployeeType__c</fullName>
    <label>EmployeeType</label>
    <length>30</length>
    <type>Text</type>
</CustomField>