objects/Employee__c/fields/Exempt_Status__c.field-meta.xml
<CustomField>
    <fullName>Exempt_Status__c</fullName>
    <label>Exempt Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>