objects/Employee__c/fields/Job_Position__c.field-meta.xml
<CustomField>
    <fullName>Job_Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Position</label>
    <referenceTo>Job_Position__c</referenceTo>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>