objects/Employee__c/fields/Map_Resource__c.field-meta.xml
<CustomField>
    <fullName>Map_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Map Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Resource__c.Category__c</field>
            <operation>equals</operation>
            <value>Labor</value>
        </filterItems>
        <filterItems>
            <field>Resource__c.Employee__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Resource__c</referenceTo>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>