objects/Employee__c/fields/Map_to_Pay_Rule__c.field-meta.xml
<CustomField>
    <fullName>Map_to_Pay_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Map to Pay Rule</label>
    <referenceTo>Pay_Rule__c</referenceTo>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>