objects/Employee__c/fields/Map_to_Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Map_to_Resource_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Map to Resource Type</label>
    <referenceTo>Resource_Type__c</referenceTo>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>