objects/Employee__c/fields/Map_to_Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Map_to_Service_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Map to Service Center</label>
    <referenceTo>Service_Center__c</referenceTo>
    <relationshipName>Employees1</relationshipName>
    <type>Lookup</type>
</CustomField>