objects/Employee__c/fields/Potential_Map_to_Resource__c.field-meta.xml
<CustomField>
    <fullName>Potential_Map_to_Resource__c</fullName>
    <label>Potential Map to Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>