objects/Employee__c/fields/Union_ID__c.field-meta.xml
<CustomField>
    <fullName>Union_ID__c</fullName>
    <label>Union ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>