objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Division_Id__c</columns>
    <columns>Full_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Hire_Date__c</columns>
    <columns>Map_Resource__c</columns>
    <columns>New_Record__c</columns>
    <columns>Potential_Map_to_Resource__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>